cmake_minimum_required(VERSION 3.0)

PROJECT (HELLO)
SET (SRC_LIST ${HELLO_SOURCE_DIR}/src/hello.cpp)
SET (EXECUTABLE_OUTPUT_PATH ${HELLO_BINARY_DIR}/BIN)
SET (LIBRARY_OUTPUT_PATH ${HELLO_BINARY_DIR}/lib)

MESSAGE(STATUS "This is BINARY dir" ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir" ${HELLO_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")
#ADD_SUBDIRECTORY(bin)
#ADD_EXECUTABLE(hello ${SRC_LIST})
ADD_LIBRARY(hello ${SRC_LIST})

INSTALL(TARGETS hello DESTINATION {LIBRARY_OUTPUT_PATH})
